Base View, Model, Controller && Db class

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "myframe/myframe",
-    "require": {},
+    "require": {
+        "gabordemooij/redbean": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "app\\": "app",
