--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "myframe/myframe",
     "require": {
-        "gabordemooij/redbean": "dev-master"
+        "gabordemooij/redbean": "dev-master",
+        "vlucas/valitron": "^1.4"
     },
     "autoload": {
         "psr-4": {
