--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "autoload": {
         "psr-4": {
             "app\\": "app",
-            "myframe\\": "vendor/myframe"
+            "myframe\\": "vendor/myframe",
+            "console\\": "console_app"
         }
     }
 }
