--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "require": {
         "gabordemooij/redbean": "dev-master",
         "vlucas/valitron": "^1.4",
-        "intervention/image": "^2.5"
+        "intervention/image": "^2.5",
     },
     "autoload": {
         "psr-4": {
